--- a/package.json
+++ b/package.json
@@ -1,15 +1,38 @@
 {
-  "name": "freighthub-frontend-challenge",
+  "name": "freighthub-backend-solution",
   "version": "1.0.0",
-  "description": "FreightHub Frontend Coding Challenge",
+  "description": "FreightHub Backend Coding Solution",
   "main": "index.js",
-  "repository": "git@github.com:freight-hub/freighthub-frontend-challenge.git",
-  "author": "FreightHub Recruiting Team",
+  "author": "Mbajiaku George",
   "license": "MIT",
   "scripts": {
-    "server": "json-server db.json"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "lint": "eslint . --ext .ts"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/config": "^0.0.41",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "eslint": "^8.11.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.2"
   },
   "dependencies": {
-    "json-server": "^0.14.2"
+    "@typegoose/typegoose": "^9.7.0",
+    "apollo-server": "^3.6.4",
+    "bcrypt": "^5.0.1",
+    "class-validator": "^0.13.2",
+    "config": "^3.3.7",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.0",
+    "graphql": "^15.8.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.6",
+    "nanoid": "^3.3.1",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1"
   }
 }
