--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 PRIVATE_KEY=PRIVATE_KEY_EXAMPLE
 PUBLIC_KEY=PUBLIC_KEY_EXAMPLE
 MONGO_DB_URL=MONGO_DB_URL_EXAMPLE
+NODE_ENV=production || development
